<resources>
    <string name="app_name">Raddar</string>
    <string name="raddar_top_name">Raddar:</string>
    <string name="raddar_version">Raddar Mock Beta v%s</string>
    <string name="raddar_distance_meters">m.</string>
    <string name="you_are_amazing">YOU ARE GOOD</string>
    <string name="tab_footprints">Footprints</string>
    <string name="ts_map_placeholder">ts_map_placeholder</string>
    <string name="ts_image_details">ts_image_details</string>
    <string name="btn_following">Be fan</string>
    <string name="btn_unfollowing">I\'m a fan</string>
    <string name="btn_take_photo">Take a picture</string>
    <string name="btn_main_center_gps">Center your position</string>
    <string name="btn_main_center_compass">Center your compas</string>
    <string name="btn_main_clean_map">Clean map</string>
    <string name="btn_main_unclean_map">Unclean map</string>
    <string name="btn_main_show_territory">Where Am I?</string>
    <string name="btn_main_invite_friends">Invite Friends</string>
    <string name="btn_main_friends_fans">Friends &amp; Fans</string>
    <string name="btn_main_footprints_flavs">My collection</string>
    <string name="btn_main_settings">Settings</string>
    <string name="btn_main_profile_edit">Edit profile</string>
    <string name="btn_main_tutorial">Instructions</string>
    <string name="btn_main_logout">Log out</string>
    <string name="btn_influencers_show_territory_parent">Upper territory</string>
    <string name="btn_influencers_show_territory_son">Lower territory</string>
    <string name="btn_influencers_show_territory_map">Show territory</string>
    <string name="btn_influencers_refresh">Update position</string>
    <string name="btn_user_profile_follow">Be a fan</string>
    <string name="btn_user_profile_social_network">Social networks</string>
    <string name="btn_user_profile_report">Report profile</string>
    <string name="send_email_chooser">Send us an email</string>
    <string name="send_email_territories_email">territories@raddarapp.com</string>
    <string name="send_email_territories_subject">Ask for a new territory</string>
    <string name="send_email_comments_email">info@raddarapp.com</string>
    <string name="send_email_remove_account_subject">I want to remove my account</string>
    <string name="send_email_remove_account_email">byebye@raddarapp.com</string>
    <string name="send_email_comments_subject">My comments</string>
    <string name="navigation_my_raddar">Vote</string>
    <string name="navigation_leaders">Leaders</string>
    <string name="navigation_my_friends">Friends</string>
    <string name="navigation_my_profile">Me</string>
    <string name="welcome_screen_no_show_more">Dont show anymore</string>
    <string name="welcome_screen_go">Continue</string>
    <string name="welcome_screen_end">Finish</string>
    <string name="welcome_screen_first"><![CDATA[<font color="#FFFFFF">"Vote with no mercy<br>what others post"</font><font color="#04E601">" around you"</font><font color="#00c4ff">"<br/>(your vote is anonymous)"</font>]]></string>
    <string name="welcome_screen_second"><![CDATA[<font color="#FFFFFF">"Vote "</font><font color="#04E601">"swipping up </font><font color="#FFFFFF">"if you<br/>like what you see"</font><font color="#00c4ff">"<br/>(add +1 point)"</font>]]></string>
    <string name="welcome_screen_third"><![CDATA[<font color="#FFFFFF">"Vote "</font><font color="#04E601">"swipping down </font><font color="#FFFFFF">"if you<br/>don\'t like it"</font><font color="#00c4ff">"<br/>(subtract -1 pooint)"</font>]]></string>
    <string name="welcome_screen_fourth"><![CDATA[<font color="#FFFFFF">"Worst posts"</font><font color="#FFFFFF">"<br/>just die"<font color="#04E601">" yes DIE"</font><font color="#00c4ff">"<br/>(forever)"</font>]]></string>
    <string name="welcome_screen_fifth"><![CDATA[<font color="#FFFFFF">"the"</font> <font color="#04E601">"very best posts"</font><font color="#FFFFFF">"<br/>will become " <font color="#ffed00">"leaders"</font><font color="#00c4ff">"<br/>(where you publish)"</font>]]></string>
    <string name="welcome_try_again">Tap here to update\n the picture</string>
    <string name="welcome_in_app_screen_first"><![CDATA[<font color="#FFFFFF">"Is an honor to have<br/>you between "</font><font color="#04E601">"the first<br/>2.000 Beta-Testers "]]></string>
    <string name="welcome_in_app_screen_second"><![CDATA[<font color="#FFFFFF">"Find the icon "</font><font color="#04E601">"Instructions"</font><font color="#FFFFFF">"<br/>to know all <br/>the rules"</font>]]></string>
    <string name="welcome_in_app_screen_third"><![CDATA[<font color="#FFFFFF">"Win </font><font color="#FFDD03">+200m.</font> extra por cada<br/> amigo que se registre con<br/>"</font><font color="#04E601">"tu código de invitación"</font>]]></string>
    <string name="tutorial_screen_coin_title">What size is your Raddar?</string>
    <string name="tutorial_screen_coin_description">Hearts are the total votes of the post (positive less negatives)</string>
    <string name="tutorial_screen_top_rankings_title">Posts Ranking</string>
    <string name="tutorial_screen_top_rankings_description">We introduce you the best posts in Raddar</string>
    <string name="tutorial_screen_github_title">GitHub</string>
    <string name="tutorial_screen_github_description">You can see the source code and more information on GitHub: https://github.com/jaimegc/raddarapp</string>
    <string name="tutorial_screen_instructions_title">Instructions of the game</string>
    <string name="tutorial_screen_instructions_description">All you need to know is here</string>
    <string name="tutorial_screen_show_territory_title">Where Am I?</string>
    <string name="tutorial_screen_show_territory_description">Tap this to check your current territory</string>
    <string name="tutorial_screen_show_instructions_title">Instructions</string>
    <string name="tutorial_screen_show_instructions_description">Some rules for the game</string>
    <string name="tutorial_screen_scan_title">Scan posts</string>
    <string name="tutorial_screen_scan_description">Tap here to detect all the posts around you</string>
    <string name="tutorial_screen_menu_settings_title">Profile options</string>
    <string name="tutorial_screen_menu_settings_description">Tap here to adjust all your settings</string>
    <string name="tutorial_screen_audio_profile_title">Profile audio</string>
    <string name="tutorial_screen_audio_profile_description">Tap here to listening your audio</string>
    <string name="tutorial_screen_footprints_title">My posts</string>
    <string name="tutorial_screen_footprints_description">Your total of published posts</string>
    <string name="tutorial_screen_deaths_title">Killed</string>
    <string name="tutorial_screen_deaths_description">All your posts deleted by the community</string>
    <string name="tutorial_screen_votes_title">My votes</string>
    <string name="tutorial_screen_votes_description">All you are voted</string>
    <string name="tutorial_screen_compliments_title">Claps</string>
    <string name="tutorial_screen_compliments_description">All your received claps</string>
    <string name="tutorial_screen_stars_title">Average</string>
    <string name="tutorial_screen_stars_description">Your average rating</string>
    <string name="tutorial_screen_range_title">Your score</string>
    <string name="tutorial_screen_range_description">All the votes you have received (positives - negatives)</string>
    <string name="tutorial_screen_create_footprint_title">Publish your first post</string>
    <string name="tutorial_screen_create_footprint_description">Tap here to publish your picture. \n\nReady?</string>
    <string name="tutorial_screen_icon_profile_title">My profile</string>
    <string name="tutorial_screen_icon_profile_description">Tap here to access to your profile and keep tapping to update</string>
    <string name="tutorial_screen_previsualization_title">Preview your picture</string>
    <string name="tutorial_screen_previsualization_description">Check how your picture will be actually published</string>
    <string name="tutorial_screen_footprint_visible_title">Hide your position</string>
    <string name="tutorial_screen_footprint_visible_description">Select your geolocation</string>
    <string name="tutorial_screen_classificate_title">Classify your post</string>
    <string name="tutorial_screen_classificate_description">Your post will play in this category</string>
    <string name="tutorial_screen_influencer_title">Here is the ranking</string>
    <string name="tutorial_screen_influencer_description">Here you will view the leader of every territory</string>
    <string name="tutorial_screen_territory_name_title">Current territory</string>
    <string name="tutorial_screen_territory_name_description">Here you will see the name of the territory</string>
    <string name="tutorial_screen_territory_map_title">Explore a territory</string>
    <string name="tutorial_screen_territory_map_description">Tap here to view the area of the territory</string>
    <string name="tutorial_screen_territory_parent_title">Switch the territory</string>
    <string name="tutorial_screen_territory_parent_description">Use the arrow icons to view upper or lower territories</string>
    <string name="tutorial_screen_influencer_settings_title">Option icon</string>
    <string name="tutorial_screen_influencer_settings_description">Tap here to refresh and asking for help</string>
    <string name="tutorial_screen_coin_mined_title">Mine extra meters</string>
    <string name="tutorial_screen_coin_mined_description">When you want to win extra meters</string>
    <string name="tutorial_screen_promo_code_title">Invite your contacts</string>
    <string name="tutorial_screen_promo_code_description">Comparte tu código de invitación con tus amigos y gana %1$s metros extra por cada registro. Además, tu amigo ganará %2$s metros. Eso se llama \"Karma Instantáneo\".</string>
    <string name="flag_level_conventional">Flag\nConvencional</string>
    <string name="login_facebook_button">Log in with Facebook</string>
    <string name="login_google_button">Log in with Google</string>
    <string name="login_ready">Ready to participate?</string>
    <string name="have_account">Already registered?</string>
    <string name="have_account_log_in"><![CDATA[<u>Log in</u>]]></string>
    <string name="enter_complete_profile_finish">Finish</string>
    <string name="enter_complete_profile_birthdate">You were born on:</string>
    <string name="enter_complete_profile_gender">Gender:</string>
    <string name="enter_complete_profile_hint_birthdate">dd/mm/yyyy</string>
    <string name="enter_complete_profile_confirm_username">Confirm or edit your username</string>
    <string name="enter_complete_profile_confirm_facebook_email">Confirm your facebook email</string>
    <string name="promo_code_text_friends">Pulsa aquí si te han dado\nun código de invitación</string>
    <string name="register_email">Email</string>
    <string name="register_username">Username</string>
    <string name="register_terms_conditions"><![CDATA[<font color="#B3B3B3">"I\'m older than 13 years old<br/>"</font><font color="#FFFFFF">"<u>and confirm terms and conditions</u>"</font><font color="#B3B3B3">" of the app"</font>]]></string>
    <string name="crash_message_top">¡¡ Sorry !!</string>
    <string name="crash_message_middle">... :( :( :(</string>
    <string name="crash_message_bottom">We are nervous with\n your presence </string>
    <string name="crash_button_restart">Restart the app</string>
    <string name="crop_image_menu_rotate_left">Rotate</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_rotate_crop">Rotate Crop</string>
    <string name="crop_image_menu_crop">Save</string>
    <string name="mock_login">This is a mock, we don\'t use any real data. Click on \"Log in\"</string>
</resources>