<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:ignore="NamespaceTypo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/confetti"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/background_screen_confetti" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/raddar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_register"
                android:layout_marginTop="30dp"
                android:padding="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_very_big1"
                android:text="@string/login_ready"
                android:textColor="@color/white"
                android:layout_marginBottom="14dp"
                android:gravity="center" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                facebook:com_facebook_login_text="@string/login_facebook_button"
                android:textSize="@dimen/textsize_big1"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center" />

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/login_google"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/login_google_button"
                android:paddingEnd="26dp"
                android:gravity="center"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/linear_login_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/have_account"
                    android:textColor="@color/grey1_raddar"
                    android:textSize="@dimen/textsize_big1" />

                <TextView
                    android:id="@+id/have_account_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/have_account_log_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_big1" />
            </LinearLayout>

            <TextView
                android:id="@+id/mock_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/mock_login"
                android:textColor="@color/coin"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:textSize="@dimen/textsize_big1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>